--- a/src/nnavigation/package.xml
+++ b/src/nnavigation/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
 <!--  TODO your package name -->
-  <name>planning</name>
+  <name>nnavigation</name>
   <version>0.1.0</version>
   <description>This package does great things</description>
   <maintainer email="e@mail.fr">Name</maintainer>
