--- a/src/nnavigation/config/nav2_params2_sim.yaml
+++ b/src/nnavigation/config/nav2_params2_sim.yaml
@@ -1,6 +1,6 @@
 bt_navigator:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
     global_frame: map
     robot_base_frame: waffle2/base_footprint
     odom_topic: /waffle2/odom
@@ -60,15 +60,15 @@ bt_navigator:
 
 bt_navigator_navigate_through_poses_rclcpp_node:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
 
 bt_navigator_navigate_to_pose_rclcpp_node:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
 
 controller_server:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
     controller_frequency: 20.0
     FollowPath:
       plugin: "nav2_rotation_shim_controller::RotationShimController"
@@ -168,7 +168,7 @@ local_costmap:
       publish_frequency: 2.0
       global_frame: waffle2/odom
       robot_base_frame: waffle2/base_footprint
-      use_sim_time: false
+      use_sim_time: True
       rolling_window: true
       width: 3
       height: 3
@@ -191,7 +191,7 @@ global_costmap:
       publish_frequency: 1.0
       global_frame: map
       robot_base_frame: waffle2/base_footprint
-      use_sim_time: false
+      use_sim_time: True
       footprint: "[ [0.175, 0.16], [-0.175, 0.16], [-0.175, -0.16], [0.175, -0.16] ]"
       resolution: 0.06
       track_unknown_space: true
@@ -222,7 +222,7 @@ global_costmap:
 planner_server:
   ros__parameters:
     expected_planner_frequency: 20.0
-    use_sim_time: false
+    use_sim_time: True
     planner_plugins: ["GridBased"]
     GridBased:
       plugin: "nav2_smac_planner/SmacPlannerLattice"
@@ -254,7 +254,7 @@ planner_server:
 
 smoother_server:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
     smoother_plugins: ["simple_smoother"]
     simple_smoother:
       plugin: "nav2_smoother::SimpleSmoother"
@@ -281,7 +281,7 @@ behavior_server:
     global_frame: map
     robot_base_frame: waffle2/base_footprint
     transform_tolerance: 0.1
-    use_sim_time: false
+    use_sim_time: true
     simulate_ahead_time: 2.0
     max_rotational_vel: 0.5
     min_rotational_vel: 0.4
@@ -289,11 +289,11 @@ behavior_server:
 
 robot_state_publisher:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
 
 waypoint_follower:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
     loop_rate: 20
     stop_on_failure: false
     waypoint_task_executor_plugin: "wait_at_waypoint"
@@ -304,9 +304,9 @@ waypoint_follower:
 
 velocity_smoother:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
     smoothing_frequency: 20.0
-    scale_velocities: false
+    scale_velocities: False
     feedback: "OPEN_LOOP"
     max_velocity: [1.0, 0.0, 6.0]
     min_velocity: [-1.0, 0.0, -6.0]
@@ -316,3 +316,54 @@ velocity_smoother:
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
     velocity_timeout: 1.0
+
+
+amcl:
+  ros__parameters:
+    alpha1: 0.2
+    alpha2: 0.2
+    alpha3: 0.2
+    alpha4: 0.2
+    alpha5: 0.2
+    base_frame_id: waffle2/base_footprint
+    service_introspection_mode: "disabled"
+    beam_skip_distance: 0.5
+    beam_skip_error_threshold: 0.9
+    beam_skip_threshold: 0.3
+    do_beamskip: false
+    global_frame_id: map
+    lambda_short: 0.1
+    laser_likelihood_max_dist: 2.0
+    laser_max_range: 100.0
+    laser_min_range: -1.0
+    laser_model_type: likelihood_field
+    max_beams: 60
+    max_particles: 2000
+    min_particles: 500
+    odom_frame_id: waffle2/odom
+    pf_err: 0.05
+    pf_z: 0.99
+    recovery_alpha_fast: 0.0
+    recovery_alpha_slow: 0.0
+    resample_interval: 1
+    robot_model_type: "nav2_amcl::DifferentialMotionModel"
+    save_pose_rate: 0.5
+    sigma_hit: 0.2
+    tf_broadcast: true
+    transform_tolerance: 1.0
+    update_min_a: 0.2
+    update_min_d: 0.25
+    z_hit: 0.5
+    z_max: 0.05
+    z_rand: 0.5
+    z_short: 0.05
+    scan_topic: /waffle2/scan
+    map_topic: map
+    set_initial_pose: false
+    always_reset_initial_pose: false
+    first_map_only: false
+    initial_pose:
+      x: 0.0
+      y: 0.0
+      z: 0.0
+      yaw: 0.0
