--- a/src/nnavigation/package.xml
+++ b/src/nnavigation/package.xml
@@ -17,6 +17,8 @@
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>tf2_ros</depend>
+  <exec_depend>turtlebot3_description</exec_depend>
+
 
 
   <export>
